- changed test_udf parameter name

--- a/models/deploy/core/_utils.yml
+++ b/models/deploy/core/_utils.yml
@@ -5,5 +5,5 @@ models:
         tests:
           - test_udf:
               args: "'hello'"
-              validations:
+              assertions:
                 - result = 'hello'
