--- a/models/deploy/marketplace/blockpour/blockpour_utils__.yml
+++ b/models/deploy/marketplace/blockpour/blockpour_utils__.yml
@@ -10,7 +10,7 @@ models:
                 '/v1/tokens/1/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48', {
                   'blockNumber': 17767007
                 }
-              validations:
+              assertions:
                 - result:status_code = 200
 
       - name: post
@@ -25,5 +25,5 @@ models:
                   'blockNumber': 17767016,
                   'input': {}
                 }
-              validations:
+              assertions:
                 - result:status_code = 200
