--- a/models/deploy/marketplace/footprint/footprint_utils__footprint_utils.yml
+++ b/models/deploy/marketplace/footprint/footprint_utils__footprint_utils.yml
@@ -14,5 +14,5 @@ models:
                   'limit': 10,
                   'offset': 0
                 }
-              validations:
+              assertions:
                 - result:status_code = 200
