--- a/models/deploy/marketplace/quicknode/quicknode_ethereum_nfts__quicknode_utils.yml
+++ b/models/deploy/marketplace/quicknode/quicknode_ethereum_nfts__quicknode_utils.yml
@@ -13,7 +13,7 @@ models:
                       '0x7Bd29408f11D2bFC23c34f18275bBf23bB716Bc7'
                       ]
                 }
-              validations:
+              assertions:
                 - result:status_code = 200
 
       - name: fetch_nfts
@@ -34,7 +34,7 @@ models:
                     '0xBC4CA0EdA7647A8aB7C2061c2E118A18a936f13D'
                     ]
                 }
-              validations:
+              assertions:
                 - result:status_code = 200
 
       - name: fetch_nfts_by_collection
@@ -51,7 +51,7 @@ models:
                   'page': 1,
                   'perPage': 10
                 }
-              validations:
+              assertions:
                 - result:status_code = 200
 
       - name: get_transfers_by_nft
@@ -65,7 +65,7 @@ models:
                 'page': 1,
                 'perPage': 10
                 }
-              validations:
+              assertions:
                 - result:status_code = 200
 
       - name: verify_nfts_owner
@@ -80,5 +80,5 @@ models:
                     '0xd07dc4262bcdbf85190c01c996b4c06a461d2430:133803'
                   ]
                 }
-              validations:
+              assertions:
                 - result:status_code = 200
