--- a/models/deploy/marketplace/bitquery/bitquery__.yml
+++ b/models/deploy/marketplace/bitquery/bitquery__.yml
@@ -32,7 +32,7 @@ models:
                   }',
                   'variables': '{}'
                 }
-              validations:
+              assertions:
                 - result:status_code = 200
 
 
