--- a/models/deploy/marketplace/credmark/credmark_utils__.yml
+++ b/models/deploy/marketplace/credmark/credmark_utils__.yml
@@ -11,7 +11,7 @@ models:
                 , {
                 'blockNumber': 17767007
                 }
-              validations:
+              assertions:
                 - result:status_code = 200
 
       - name: post
@@ -26,5 +26,5 @@ models:
                   'blockNumber': 17725466,
                   'input': {'address': '0xf89a3799b90593317E0a1Eb74164fbc1755A297A'}
                 }
-              validations:
+              assertions:
                 - result:status_code = 200
