--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -1,5 +1,5 @@
 name: dbt_run_adhoc
-run-name: ${{ inputs.dbt_command }}
+run-name: ${{ inputs.environment }} - ${{ inputs.dbt_command }}
 
 on:
   workflow_dispatch:
@@ -62,7 +62,7 @@ jobs:
           dbt deps
       - name: Run DBT Jobs
         run: |
-          dbt --debug ${{ inputs.dbt_command }}
+          dbt ${{ inputs.dbt_command }}
 
       - name: Store logs
         uses: actions/upload-artifact@v3
