- update test workflow to allow for manual run and automatically run on push to main

--- a/.github/workflows/dbt_test.yml
+++ b/.github/workflows/dbt_test.yml
@@ -1,6 +1,31 @@
 name: test udfs
 
 on:
+  push:
+    branches:
+      - "main"
+  workflow_dispatch:
+    inputs:
+      environment:
+        type: choice
+        description: DBT Run Environment
+        required: true
+        options:
+          - dev
+          - prod
+        default: dev
+      warehouse:
+        type: choice
+        description: Snowflake warehouse
+        required: true
+        options:
+          - DBT
+          - DBT_CLOUD
+        default: DBT
+      dbt_command:
+        type: string
+        description: 'DBT Run Command'
+        required: true
   schedule:
     # Runs “Daily at midnight GMT” (see https://crontab.guru)
     - cron: '0 0 * * *'
@@ -22,11 +47,11 @@ concurrency:
   group: ${{ github.workflow }}
 
 jobs:
-  run_tests:
+  scheduled_job:
+    if: ${{ github.event_name == 'schedule' }} || github.event_name == 'push'
     runs-on: ubuntu-latest
     environment:
       name: workflow_prod
-
     steps:
       - uses: actions/checkout@v3
 
@@ -44,8 +69,26 @@ jobs:
         run: |
           dbt test --selector test_udfs
 
-      - name: Store logs
-        uses: actions/upload-artifact@v3
+  manual_job:
+    if:  ${{ github.event_name == 'workflow_dispatch' }}
+    runs-on: ubuntu-latest
+    env:
+      WAREHOUSE: ${{ inputs.warehouse }}
+    environment:
+      name: workflow_${{ inputs.environment }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-python@v4
         with:
-          name: dbt-logs
-          path: logs
+          python-version: "3.10"
+          cache: "pip"
+
+
+      - name: install dependencies
+        run: |
+          pip install -r requirements.txt
+          dbt deps
+      - name: Run DBT Jobs
+        run: |
+          dbt test --selector test_udfs
