--- a/.github/workflows/dbt_test.yml
+++ b/.github/workflows/dbt_test.yml
@@ -41,41 +41,17 @@ concurrency:
 
 jobs:
   scheduled_job:
-    if: ${{ github.event_name == 'schedule' }} || ${{ github.event_name == 'push' }}
-    runs-on: ubuntu-latest
-    environment:
-      name: workflow_prod
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-          cache: "pip"
-      - name: install dependencies
-        run: |
-          pip install -r requirements.txt
-          dbt deps
-      - name: Run DBT Jobs
-        run: |
-          dbt test --selector test_udfs
+    uses: ./.github/workflows/dbt.yml
+    if: github.event_name == 'schedule' || github.event_name == 'push'
+    with:
+      warehouse: ${{ inputs.warehouse }}
+      environment: workflow_${{ inputs.environment }}
+      command: test --selector test_udfs
 
   manual_job:
-    if:  ${{ github.event_name == 'workflow_dispatch' }}
-    runs-on: ubuntu-latest
-    env:
-      WAREHOUSE: ${{ inputs.warehouse }}
-    environment:
-      name: workflow_${{ inputs.environment }}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-          cache: "pip"
-      - name: install dependencies
-        run: |
-          pip install -r requirements.txt
-          dbt deps
-      - name: Run DBT Jobs
-        run: |
-          dbt test --selector test_udfs
+    uses: ./.github/workflows/dbt.yml
+    if:  github.event_name == 'workflow_dispatch'
+    with:
+      warehouse: ${{ inputs.warehouse }}
+      environment: workflow_${{ inputs.environment }}
+      command: test --selector test_udfs
