--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -26,46 +26,14 @@ on:
         description: 'DBT Run Command'
         required: true
 
-env:
-  DBT_PROFILES_DIR: ./
-
-  ACCOUNT: "${{ vars.ACCOUNT }}"
-  ROLE: "${{ vars.ROLE }}"
-  USER: "${{ vars.USER }}"
-  PASSWORD: "${{ secrets.PASSWORD }}"
-  REGION: "${{ vars.REGION }}"
-  DATABASE: "${{ vars.DATABASE }}"
-  WAREHOUSE: "${{ inputs.warehouse }}"
-  SCHEMA: "${{ vars.SCHEMA }}"
-
 concurrency:
   group: ${{ github.workflow }}
 
 jobs:
-  run_dbt_jobs:
-    runs-on: ubuntu-latest
-    environment:
-      name: workflow_${{ inputs.environment }}
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-          cache: "pip"
-
-
-      - name: install dependencies
-        run: |
-          pip install -r requirements.txt
-          dbt deps
-      - name: Run DBT Jobs
-        run: |
-          dbt ${{ inputs.dbt_command }}
-
-      - name: Store logs
-        uses: actions/upload-artifact@v3
-        with:
-          name: dbt-logs
-          path: logs
+  ad_hoc:
+    uses: ./.github/workflows/dbt.yml
+    secrets: inherit
+    with:
+      warehouse: ${{ inputs.warehouse }}
+      environment: workflow_${{ inputs.environment }}
+      command: ${{ inputs.dbt_command }}
