--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -61,4 +61,6 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dbt-logs
-          path: logs
+          path: |
+            logs
+            target
