--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -3,8 +3,9 @@ on:
   workflow_call:
     inputs:
       warehouse:
-        required: true
+        required: false
         type: string
+        default: DBT_CLOUD
       environment:
         required: true
         type: string
@@ -56,3 +57,10 @@ jobs:
       - name: Run DBT Jobs
         run: |
           dbt ${{ inputs.command }}
+      - name: Store logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: dbt-logs
+          path: |
+            logs
+            target
