--- a/.github/workflows/dbt_test.yml
+++ b/.github/workflows/dbt_test.yml
@@ -41,6 +41,6 @@ jobs:
     if:  github.event_name == 'workflow_dispatch'
     secrets: inherit
     with:
-      warehouse: ${{ inputs.warehouse }}
-      environment: workflow_${{ inputs.environment }}
+      warehouse: DBT_CLOUD
+      environment: workflow_prod
       command: test --selector test_udfs
